<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registro">

    <TextView
        android:id="@+id/tituloregistro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pagina_de_registro"
        android:textStyle="bold|italic"
        android:textSize="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtusuarioreg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:text="@string/txtusuario"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.11"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tituloregistro" />

    <EditText
        android:id="@+id/editTextUsuarioreg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:hint="@string/hintusuario"
        app:layout_constraintStart_toStartOf="@+id/txtusuarioreg"
        app:layout_constraintTop_toBottomOf="@+id/txtusuarioreg" />

    <TextView
        android:id="@+id/txtpassreg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtpass"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/txtusuarioreg"
        app:layout_constraintTop_toBottomOf="@+id/editTextUsuarioreg" />

    <EditText
        android:id="@+id/editTextPassreg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/hint_digite_su_contrase_a_aqui"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtpassreg" />

    <TextView
        android:id="@+id/txtpass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/repetirpass"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/txtpassreg"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassreg" />

    <EditText
        android:id="@+id/editTextPassconfir"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/repetirpass_hint"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtpass" />

    <Button
        android:id="@+id/btnRegistrarse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/registrarse"
        android:onClick="moverContenido"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.536"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassconfir" />

</androidx.constraintlayout.widget.ConstraintLayout>