<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Contenido">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/titulocontenido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:autoSizeTextType="uniform"
                android:text="@string/titulocontenido"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold|italic"

                 />

            <ImageButton
                android:id="@+id/btncontrolcasa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                app:srcCompat="@drawable/micasa"
                android:onClick="btncontrol"/>

            <TextView
                android:id="@+id/textcontrolcasa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/control_del_hogar"
                android:textSize="20sp"
                 />

            <ImageButton
                android:id="@+id/btncalculadora"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                app:srcCompat="@drawable/calculadora"
                android:onClick="btncalculadora"/>

            <TextView
                android:id="@+id/txtcalculadoradeconsumo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/TXTcalculadora_de_consumo"
                android:textSize="20sp"
               />

            <ImageButton
                android:id="@+id/btnTips"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                app:srcCompat="@drawable/tips"
                android:onClick="btntips"/>

            <TextView
                android:id="@+id/txttipsdeconsumo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/txttips_de_consumo"
                android:textSize="20sp"/>

        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>